Make URLEncoder.encode() Java 8 compatible